# parsql

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.en.md  README.md  cliff.toml
examples/deadpool-postgres/: Cargo.toml
examples/postgres/: Cargo.toml
examples/postgres/src/: delete_sample.rs  insert_sample.rs  lib.rs  main.rs  pagination_sample.rs  select_sample.rs  transaction_sample.rs  update_sample.rs
examples/sqlite/: Cargo.toml
examples/sqlite/src/: main.rs  pagination_sample.rs
examples/sqlite/src/models/: mod.rs  stats.rs  user.rs  uuid_user.rs
examples/tokio-deadpool-postgres/: Cargo.toml
examples/tokio-deadpool-postgres/src/: config.rs  main.rs  models.rs  repository.rs
examples/tokio-postgres/: Cargo.toml  README.md
examples/tokio-postgres/src/: crud_ops_sample.rs  db_connection.rs  delete_sample.rs  get_sample.rs  insert_sample.rs  lib.rs  limit_offset_sample.rs  macro_example.rs  macro_sample.rs  main.rs  update_sample.rs
parsql-core/: Cargo.toml
parsql-core/src/: lib.rs
parsql-deadpool-postgres/: Cargo.toml  README.en.md  README.md
parsql-deadpool-postgres/src/: crud_ops.rs  lib.rs  pool_extensions.rs  traits.rs  transaction_extensions.rs  transactional_ops.rs
parsql-macros/: Cargo.toml  README.en.md  README.md
parsql-macros/src/: crud_impl.rs  deletable.rs  from_row.rs  insertable.rs  lib.rs  numbering_test.rs  query_builder.rs  queryable.rs  sql_params.rs  sql_sanitizer.rs  sqlite_impl.rs  update_params.rs  updateable.rs  utils.rs
parsql-macros/src/implementations/: postgres.rs  sqlite.rs
parsql-macros/src/tests/: param_numbering_tests.rs  sql_param_counter_tests.rs
parsql-postgres/: Cargo.toml  README.en.md  README.md
parsql-postgres/benches/: postgres_benches.rs
parsql-postgres/src/: crud_ops.rs  lib.rs  macros.rs  traits.rs  transaction_ops.rs
parsql-postgres/src/deadpool_postgres.rs/: mod.rs  transactional_ops.rs
parsql-postgres/src/postgres/: crud_ops.rs  mod.rs
parsql-postgres/src/tokio_postgres/: crud_ops.rs  mod.rs
parsql-sqlite/: Cargo.toml  README.en.md  README.md
parsql-sqlite/benches/: sqlite_benches.rs
parsql-sqlite/src/: crud_ops.rs  lib.rs  macros.rs  traits.rs  transactional_ops.rs
parsql-tokio-postgres/: Cargo.toml  README.en.md  README.md
parsql-tokio-postgres/benches/: tokio_postgres_benches.rs
parsql-tokio-postgres/src/: crud_ops.rs  lib.rs  macros.rs  traits.rs  transaction_ops.rs  transactional_ops.rs
src/: lib.rs
