[workspace]
resolver = "2"
members = [
    "examples/postgres",
    "examples/sqlite",
    "examples/tokio-postgres",
    "parsql-core",
    "parsql-macros",
    "parsql-postgres",
    "parsql-sqlite",
    "parsql-tokio-postgres",
]

[workspace.package]
authors = ["Mehmet Burak Muştu"]
description = "Deneyimsel bir sql yardımcı küfesidir."
edition = "2021"
categories = ["database", "asynchronous", "synchronous"]
keywords = ["database", "async", "postgres", "sqlite"]
repository = "https://github.com/yazdostum-nettr/parsql"
version = "0.1.2"
license = "MIT OR Apache-2.0"

[package]
name = "parsql"
version = "0.1.1"
description = "Deneyimsel bir sql yardımcı küfesidir. UYARI: bu bir ORM aracı değildir. Amaç sql yazımı ve kullanımında basit cümlecikler için kolaylık sağlamaktır."
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
sqlite = ["dep:parsql-sqlite"]
postgres = ["dep:parsql-postgres"]
tokio-postgres = ["parsql-tokio-postgres"]
deadpool-postgres = ["parsql-tokio-postgres/deadpool-postgres"]

[workspace.dependencies]
parsql-core = { path = "parsql-core", version = "0.1.2" }
parsql-macros = { path = "parsql-macros", version = "0.1.2" }
parsql-sqlite = { path = "parsql-sqlite", version = "0.1.2" }
parsql-postgres = { path = "parsql-postgres", version = "0.1.2" }
parsql-tokio-postgres = { path = "parsql-tokio-postgres", version = "0.1.2" }

[dependencies]
parsql-core = { workspace = true }
parsql-macros = { workspace = true }
parsql-sqlite = { workspace = true, optional = true }
parsql-postgres = { workspace = true, optional = true }
parsql-tokio-postgres = { workspace = true, optional = true }

[workspace.lints.clippy]
cast_possible_truncation = 'deny'
cast_possible_wrap = 'deny'
cast_sign_loss = 'deny'
disallowed_methods = 'deny'
