[workspace]
resolver = "2"
members = [
    "examples/postgres",
    "examples/sqlite",
    "examples/tokio-postgres",
    "parsql-macros",
    "parsql-postgres",
    "parsql-sqlite",
    "parsql-tokio-postgres",
]

[workspace.package]
authors = ["Mehmet Burak Muştu"]
description = "Deneyimsel bir sql yardımcı küfesidir."
edition = "2021"
categories = ["database", "asynchronous", "synchronous"]
keywords = ["database", "async", "postgres", "sqlite"]
repository = "https://github.com/yazdostum-nettr/parsql"
version = "0.3.1"
license = "MIT OR Apache-2.0"

[package]
name = "parsql"
version = "0.3.1"
description = "Deneyimsel bir sql yardımcı küfesidir. UYARI: bu bir ORM aracı değildir. Amaç sql yazımı ve kullanımında basit cümlecikler için kolaylık sağlamaktır."
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
sqlite = ["dep:parsql-sqlite", "parsql-macros/sqlite"]
postgres = [
    "dep:parsql-postgres",
    "parsql-macros/postgres",
]
tokio-postgres = [
    "dep:parsql-tokio-postgres",
    "parsql-macros/tokio-postgres",
]
deadpool-postgres = [
    "parsql-tokio-postgres/deadpool-postgres",
    "parsql-macros/deadpool-postgres",
]

[workspace.dependencies]
parsql-macros = { path = "parsql-macros", workspace = true }
parsql-sqlite = { path = "parsql-sqlite", workspace = true }
parsql-postgres = { path = "parsql-postgres", workspace = true }
parsql-tokio-postgres = { path = "parsql-tokio-postgres", workspace = true }

[dependencies]
parsql-macros = { workspace = true }
parsql-sqlite = { workspace = true, optional = true }
parsql-postgres = { workspace = true, optional = true }
parsql-tokio-postgres = { workspace = true, optional = true }

[workspace.lints.clippy]
cast_possible_truncation = 'deny'
cast_possible_wrap = 'deny'
cast_sign_loss = 'deny'
disallowed_methods = 'deny'
