[package]
name = "parsql-deadpool-postgres"
authors.workspace = true
description.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
parsql-macros = { path = "../parsql-macros", features = ["deadpool-postgres"] }
postgres = { version = "0.19.10" }
tokio-postgres = { version = "0.7.13" }
deadpool-postgres = { version = "0.14.1" }

[lints]
workspace = true
