[package]
name = "parsql-macros"
description = "Parsql için yardımcı makroları barındıran küfedir."
version.workspace = true
# version = "0.3.2"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0.90"
quote = "1.0.37"
proc-macro2 = "1.0.92"
regex = "1.11.1"

[features]
default = ["sqlite"]
sqlite = []
postgres = []
tokio-postgres = []
deadpool-postgres = []