[package]
name = "parsql-postgres"
description = "Parsql için postgresql entegrasyonunu sağlayan küfedir."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
postgres = ["dep:postgres"]
tokio-postgres = ["dep:postgres", "dep:tokio-postgres", "dep:parsql-macros"]
deadpool-postgres = [
    "dep:postgres",
    "dep:tokio-postgres",
    "dep:deadpool-postgres",
    "dep:parsql-macros",
]

[dependencies]
postgres = { version = "0.19.9", optional = true }
tokio-postgres = { version = "0.7.12", optional = true }
deadpool-postgres = { version = "0.14.0", optional = true }
parsql = { path = "../", version = "0.1.0", features = [
    "tokio-postgres",
], default-features = false }
parsql-macros = { path = "../parsql-macros", version = "0.1.0", optional = true }
