[package]
name = "parsql-postgres"
description = "Parsql için postgresql entegrasyonunu sağlayan küfedir."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
postgres = { version = "0.19.9" }

[dependencies.parsql-core]
workspace = true

[dependencies.parsql-macros]
workspace = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
parsql = { path = "../" }

[[bench]]
name = "postgres_benches"
harness = false
