[package]
name = "parsql-sqlite"
description = "Parsql için sqlite entegrasyonunu sağlayan küfedir."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rusqlite = { version = "0.32.1" }

[dependencies.parsql-core]
workspace = true

[dependencies.parsql-macros]
workspace = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
nanoid = "0.4.0"
parsql = { path = "../" }

[[bench]]
name = "sqlite_benches"
harness = false

[lints]
workspace = true
