[package]
name = "parsql-sqlite"
description = "Parsql için sqlite entegrasyonunu sağlayan küfedir."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rusqlite = { version = "0.34.0" }
parsql-macros = { version = "0.3.1", features = ["sqlite"] }

# [dependencies.parsql-macros]
# workspace = true
# features = ["sqlite"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
nanoid = "0.4.0"
parsql = { path = "../" }

[[bench]]
name = "sqlite_benches"
harness = false

[lints]
workspace = true
