[package]
name = "parsql-tokio-postgres"
authors.workspace = true
description.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[features]
default = ["dep:parsql-core", "dep:parsql-macros"]
deadpool-postgres = [
    "dep:parsql-core",
    "dep:parsql-macros",
    "dep:deadpool-postgres",
]

[dependencies]
postgres = { version = "0.19.9" }
tokio-postgres = { version = "0.7.12" }
deadpool-postgres = { version = "0.14.0", optional = true }
parsql-core = { path = "../parsql-core", optional = true }
parsql-macros = { path = "../parsql-macros", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
tokio = { version = "1.41.1", features = ["full"] }

[[bench]]
name = "tokio_postgres_benches"
harness = false

[lints]
workspace = true
