[package]
name = "parsql-tokio-postgres"
description = "Parsql için postgresql entegrasyonunu, tokio runtime ile birlikte sağlayan küfedir."
authors.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[features]
default = []
deadpool-postgres = ["dep:deadpool-postgres"]

[dependencies]
postgres = { version = "0.19.10" }
tokio-postgres = { version = "0.7.13" }
deadpool-postgres = { version = "0.14.1", optional = true }

[dependencies.parsql-macros]
workspace = true
features = ["tokio-postgres"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
tokio = { version = "1.41.1", features = ["full"] }

[[bench]]
name = "tokio_postgres_benches"
harness = false

[lints]
workspace = true
