[package]
name = "parsql-tokio-postgres"
description = "Parsql için postgresql entegrasyonunu, tokio runtime ile birlikte sağlayan küfedir."
authors.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
postgres = { version = "0.19.10" }
tokio-postgres = { version = "0.7.13" }
async-trait = "0.1.87"

[dependencies.parsql-macros]
workspace = true
features = ["tokio-postgres"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
tokio = { version = "1.41.1", features = ["full"] }

[[bench]]
name = "tokio_postgres_benches"
harness = false

[lints]
workspace = true
