[package]
name = "ex_tokio_pg"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres = "0.19.9"
tokio = { version = "1.41.1", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
parsql = { path = "../../", version = "0.1.0", features = ["tokio-postgres"] }
parsql-postgres = { path = "../../parsql-postgres", features = ["tokio-postgres"], version = "0.1.0" }