[package]
name = "ex_parsql_tokio_pg"
version = "0.3.2"
edition = "2021"

[dependencies]
postgres = "0.19.9"
tokio = { version = "1.41.1", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
parsql = { path = "../../", features = ["tokio-postgres"] }
dotenvy = "0.15.7"
